# template_bot

./: README.md  bot.py  install.sh  pyproject.toml
src/template_bot/util/: hotkey_utils.py  logging_utils.py
